<resources>
    <string name="app_name">"Only Food"</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName</string>

    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_hbvjhb">Sign in</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="signup">Signup</string>
    <string name="dont_have_an_account_nregister_here">DO NOT HAVE AN ACCOUNT?<font fgcolor="-#00976F5B"> SIGNUP</font></string>
    <string name="register">Register</string>
    <string name="already_registered_nlogin_here">ALREADY REGISTERED? <font fgcolor="-#00976F5B">LOGIN HERE</font></string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="prompt_password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="breakfast">BreakFast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="title_activity_break_fast">Select Meal</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="show_password"><font fgcolor="-#00976F5B">Show Password</font></string>
    <string name="title_activity_lunch">LunchActivity</string>
    <string name="title_activity_dinner">DinnerActivity</string>
</resources>
