<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center">

    <Button
        android:id="@+id/breakFastButton"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:elevation="1dp"
        android:text="@string/breakfast"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/lunchButton"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/breakFastButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/lunch"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/dinnerButton"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lunchButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/dinner"
        android:textColor="@android:color/background_light" />
</RelativeLayout>

