<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cool.foodie.loginUtility.LoginActivity">

    <!-- Login progress -->


    <LinearLayout
        android:id="@+id/register_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textMultiLine"
                android:maxLines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etPassword"
            android:layout_below="@+id/etPassword"
            android:text="@string/show_password"
            android:textColorHighlight="#ed3d8a"
            android:textIsSelectable="false"
            android:textSize="10sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            android:layout_marginTop="8dp"
            tools:ignore="RtlHardcoded">

            <AutoCompleteTextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:imeOptions="actionUnspecified"
                android:inputType="text|number"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonshape"
            android:radius="14dp"
            android:text="REGISTER"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/already_registered_nlogin_here"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:attr/textColorSecondaryInverseNoDisable"
            android:textColorHighlight="@android:color/darker_gray"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/registerprogressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone" />

    </LinearLayout>
    <!-- Register progress -->


</LinearLayout>
